--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
 #PATH IMAGE
-newsletter.images.path=newsletters-images
+event.images.path=newsletters-images
+profile.images.path=profiles-images
 spring.servlet.multipart.max-file-size=5MB
 spring.servlet.multipart.max-request-size=5MB
 
@@ -17,11 +18,11 @@ jwt.secret=${JWT_SECRET}
 jwt.expirationMs=86400000
 
 # Spring Security
-spring.security.user.name=admin
-spring.security.user.password=admin
+spring.security.user.name=${ADMIN_USERNAME}
+spring.security.user.password=${ADMIN_PASSWORD}
 
 # Firebase path
-firebase.config.path=firebase/firebase-service-account.json
+firebase.config=${FIREBASE_CONFIG}
 spring.scheduling.enabled=true
 
 # SMTP email sender
